Small changes in TodoApiApplication.java, TodoController.java, TodoServiceTest.java files.